--- a/style.css
+++ b/style.css
@@ -129,8 +129,8 @@ button {
 ul {
     list-style-type: none;
     color: var(--color-text);
-    font-family: "Inter", sans-serif;
-    font-size: 18px;
+    font-family: "Merriweather", serif;
+    font-size: 20px;
     margin: 20px 0;
 }
 
@@ -150,7 +150,7 @@ ul {
     padding: 10px 40px;
     color: var(--color-white);
     background-color: var(--color-button);
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .button-draw img {
